# pw-kit

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: API.md  INSTALL.md  LOCATORS.md
skills/pw-automator/: SKILL.md
skills/pw-automator/references/: locators.md  patterns.md  playwright-api.md  workflow-detail.md
skills/pw-automator/templates/: branch_download.py  iterate_table.py  loop_progress.py  page_analyze.py  scheduled_run.py  simple_download.py
src/pw_kit/: __init__.py  _install.py  discover.py  extract.py  filters.py  offset.py  schedule.py  utils.py
