[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pw-kit"
version = "0.1.0"
description = "Playwright developer toolkit — supplements Playwright with semantic extraction, element discovery, occlusion offset retry, and scheduling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "pw-kit contributors"},
]
keywords = ["playwright", "automation", "browser", "download", "discovery", "scheduling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
schedule = ["schedule>=1.2.0"]
dev = ["pytest>=7.0", "pytest-playwright>=0.4.0"]
browsers = ["playwright>=1.40.0"]

[project.scripts]
pw-kit-install = "pw_kit._install:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]